# fastapi_sqlalchemy_jwt_boilerplate

./: .gitignore  Dockerfile  Makefile  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml
src/: __main__.py  alembic.ini
src/apps/user/: __init__.py  dependencies.py  exceptions.py  messages.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/apps/user/auth/: __init__.py  dependencies.py  exceptions.py  messages.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/core/: constants.py  exceptions.py  lifespan.py  repositories.py  setup.py  utils.py
src/core/config/: __init__.py  auth.py  cors.py  database.py  run.py  settings_root.py
src/core/db/: __init__.py  base.py  repositories.py  sidekick.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 2024_07_10_2157-18ecd28fa66c_create_users_and_refresh_sessions_table.py
src/core/db/mixins/: __init__.py  id_mixins.py
src/environs/: .env.template
src/scripts/: app.sh
src/tests/: conftest.py
src/tests/builders/: __init__.py  user.py
src/tests/test_auth/: test_endpoints.py
src/tests/test_user/: test_endpoints.py
